--- a/package.json
+++ b/package.json
@@ -1,11 +1,13 @@
 {
   "name": "yandex_praktikum",
   "version": "0.0.1",
-  "description": "* __Основная идея.__ [Данный проект](https://kgavrilkov.github.io/mesto/) представляет собой интерактивный сервис, позволяющий редактировать информацию из профиля, добавлять и удалять понравившиеся фотографии, а также отмечать интересные снимки \"лайком\". * __Базовые составляющие.__ Основными технологиями, использованными в проекте, являются: flex, grid, БЭМ, адаптивная вёрстка, интерактивность. * __Системные требования.__ При создании проекта использовались следующие версии языков: HTML5, CSS3, JS.",
+  "description": "",
   "main": "index.js",
   "scripts": {
     "build": "webpack --mode production",
-    "dev": "webpack serve"
+    "dev": "webpack serve",
+    "deploy": "gh-pages -d dist",
+    "predeploy": "npm run build"
   },
   "repository": {
     "type": "git",
@@ -25,6 +27,7 @@
     "clean-webpack-plugin": "^3.0.0",
     "css-loader": "^5.0.1",
     "cssnano": "^4.1.10",
+    "gh-pages": "^3.1.0",
     "html-webpack-plugin": "^4.5.0",
     "mini-css-extract-plugin": "^1.3.3",
     "postcss-loader": "^4.1.0",
